--- a/static/index-nodes.html
+++ b/static/index-nodes.html
@@ -60,8 +60,8 @@
         <!-- Right Panel - Results -->
         <div class="results-panel">
             <div class="results-header">
-                <h2>Generated Ideas</h2>
-                <button id="clearResults" class="icon-btn" title="Clear Results">🗑️</button>
+                <h2>Generated Ideas 💡</h2>
+                <!-- <button id="clearResults" class="icon-btn" title="Clear Results">🗑️</button> -->
             </div>
 
             <div id="resultsContainer" class="results-container">
